Fixed Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,19 @@
     padding-top: 100px;
 }
 body{
-    margin: 0px;
+    
     text-align: center;
     font-family: 'Fauna One', serif;
     
     
+}
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 img{
     height: 250px;
@@ -17,17 +25,28 @@ img{
 .languages{
     width: 200px;
 }
+h2{
+    color: #66BFBF;
+}
+h3{
+    color: #11999e;
+}
+
 h1{
     margin: 0px;
     font-family: 'Sacramento', cursive;
-    font-size: 4.5rem;
+    font-size: 4.75rem;
+    color:#66BFBF;
+    padding-top: 100px;
+    padding-bottom: 20px;
 
 }
 .dev{
     font-family: 'Metal Mania', cursive;
-    font-size: 2rem;
+    font-size: 2.3rem;
     margin-top: 15px;
     margin-bottom: 15px;
+    color: #11999e;
 }
 
 .top-cloud{
@@ -36,6 +55,7 @@ h1{
     top: 50px;
    right: 300px;
    height: 75px;
+   
 
 }
 .mountain{
@@ -52,8 +72,8 @@ h1{
 
 .bottom-cloud{
     position: absolute;
-    bottom: 300px;
-    left: 300px;
+    bottom: 275pxpx;
+    left: 275px;
     height: 75px;
 }
 .my-image{
